# bee_hive

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  code.bee.txt  nj.py  requirements.txt
.github/workflows/: release.yml
docs/devlog/: DEVLOG-0001-rewrite.md  DEVLOG-0002-custom-brainF-runner.md  DEVLOG-0003-whatever-this-is.md  DEVLOG-0004-recent-advencements.md  DEVLOG-0005-about-rewrite-in-rust.md  DEVLOG-0006-why.md
src/: cli.rs  main.rs
src/translator/: cleanup.rs  compiler.rs  func_call.rs  intermediate_language.rs  memory_manager.rs  mod.rs  tokenizer.rs
