[package]
name = "bee_hive"
version = "0.10.1"
edition = "2024"

description = "An experimental compiler for the bee language targeting Brainfuck"
license = "MIT"
repository = "https://github.com/ak47andrew/bee_hive"
readme = "README.md"
keywords = ["compiler", "esolang", "brainfuck", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.21.3"
fancy-regex = "0.17.0"